--- a/scss/pages/home/_home.scss
+++ b/scss/pages/home/_home.scss
@@ -1,1 +1,102 @@
-@use '../../globals/colors' as *;
+@use '../../globals' as *;
+
+
+
+.home-buttonContainer {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    @include flex-center();
+
+    .mobile-home-btn {
+        @include flex-center();
+        gap: 5px;
+        width: 250px;
+        height: 70px;
+        border-radius: 30px;
+        border: solid 2px white;
+        color: white;
+        position: absolute;
+        bottom: 16%;
+        transition: all 0.2s ease-in-out;
+        font-size: 25px;
+        background: url('../../../dist/assets/img/homeBtnBG.jpeg') center/cover no-repeat;
+
+        &:hover {
+
+            transform: scale(1.04);
+        }
+
+        @media (max-width:850px) and (min-width:550px) {
+            width: 300px;
+            height: 90px;
+
+        }
+
+        @media screen and (max-width: 550px) {
+            bottom: 20%;
+        }
+
+
+    }
+
+    .language-btn {
+        @include flex-center();
+        width: 120px;
+        height: 50px;
+        border: solid 3px #30BEB3;
+        border-radius: 20px;
+        color: white;
+        transition: all 0.2s ease-in-out;
+        font-size: 25px;
+        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.356);
+        text-shadow: 3px 3px 2px rgba(0, 0, 0, 0.356);
+        bottom: 5%;
+        background: #00000048;
+        position: absolute;
+
+
+        &:hover {
+
+            transform: scale(1.04);
+        }
+
+        @media screen and (min-width: 850px) {
+            right: 3%;
+            width: 150px;
+            height: 60px;
+            background: none;
+
+        }
+
+    }
+
+
+
+}
+
+.home-img-1 {
+    display: block;
+
+    @media screen and (max-width: 850px) {
+        display: none;
+    }
+}
+
+.home-img-2 {
+    display: none;
+
+
+    @media (max-width:850px) and (min-width:550px) {
+        display: block;
+
+    }
+}
+
+.home-img-3 {
+    display: none;
+
+    @media screen and (max-width: 550px) {
+        display: block;
+    }
+}
