--- a/scss/pages/program-overview/_footer.scss
+++ b/scss/pages/program-overview/_footer.scss
@@ -30,12 +30,20 @@ footer {
                 width: 100%;
             }
 
+            div {
+                @include flex-center;
+                flex-direction: column;
+                gap: 0px;
+
+                span {
+                    text-align: center;
+                    margin-bottom: 20px;
+                    max-width: 600px;
+                    padding: 20px 20px;
+                    font-size: 20px;
 
 
-            span {
-                text-align: center;
-                margin-bottom: 20px;
-                max-width: 500px;
+                }
             }
 
             form {
