--- a/scss/pages/program-overview/_program-overview.scss
+++ b/scss/pages/program-overview/_program-overview.scss
@@ -4,13 +4,115 @@ main {
     width: 100%;
     height: 100vh;
     background: $green;
+    overflow: hidden;
 
     img {
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
+}
 
+.p2-cover {
+    position: absolute;
+    width: 100%;
+    height: 20vh;
+    bottom: 0;
+    border-bottom: solid 7px $yellow;
+    @include flex-center();
+    flex-direction: column;
+    justify-content: flex-end;
+
+    div {
+        padding: 20px 50px;
+        background: $yellow;
+        color: $green;
+        font-size: 35px;
+        border-radius: 25px 25px 0 0;
+        @include flex-center();
+
+        @media screen and (max-width: 450px) {
+            padding: 10px 30px;
+            font-size: 25px;
+            text-align: center;
+            max-width: 270px;
+        }
+    }
+
+    .--different {
+        background: #15381fd7;
+        color: white;
+
+        @media screen and (max-width: 450px) {
+            max-width: 200px;
+        }
+    }
+
+    .logos {
+        position: absolute;
+        bottom: 3%;
+        background: none;
+        width: 97%;
+        display: flex;
+        justify-content: space-between;
+
+        @media screen and (max-width: 1050px) {
+            img {
+                width: 100px;
+                height: 100px;
+                object-fit: contain;
+            }
+
+            .lp-logo {
+                width: 150px;
+                height: 100px;
+                object-fit: contain;
+
+            }
+        }
+
+
+        @media screen and (max-width: 850px) {
+            display: none;
+        }
+
+
+        img {
+            width: 120px;
+            height: 120px;
+            object-fit: contain;
+        }
+
+        .lp-logo {
+            width: 180px;
+            height: 120px;
+            object-fit: contain;
+
+        }
+
+        @media screen and (max-width: 1050px) {
+            img {
+                width: 100px;
+                height: 100px;
+                object-fit: contain;
+            }
+
+            .lp-logo {
+                width: 150px;
+                height: 100px;
+                object-fit: contain;
+
+            }
+        }
+    }
+
+
+}
+
+
+
+.main-container {
+    background: url('../../../dist/assets/img/BG.jpg') center/cover no-repeat;
 }
 
 .title-card {
@@ -46,12 +148,13 @@ main {
 }
 
 .--title-card-smaller {
-   
+
     height: 120px;
 }
 
 section {
     padding: 20px 20px;
+
 }
 
 .two-side {
@@ -64,6 +167,7 @@ section {
     @media screen and (max-width: 568px) {
         flex-direction: column;
         align-items: center;
+        gap: 0px;
     }
 
     div {
@@ -74,24 +178,30 @@ section {
 
         @media screen and (max-width: 568px) {
             width: 100%;
+
+
         }
 
         ul {
             display: flex;
             flex-direction: column;
             gap: 10px;
+
+
         }
 
         .ul-different {
-
+            margin-top: 5px;
             list-style-type: none;
 
             li {
                 display: flex;
                 gap: 10px;
-
+                margin: 0px;
             }
         }
+
+
     }
 }
 
