--- a/scss/pages/home/_home.scss
+++ b/scss/pages/home/_home.scss
@@ -76,7 +76,23 @@
 }
 
 .home-img-1 {
+    display: none;
+
+    @media screen and (max-width: 850px) {
+        display: none;
+    }
+
+    @media screen and (min-height: 900px) {
+        display: block;
+    }
+}
+
+.home-img-1_2 {
     display: block;
+
+    @media screen and (min-height: 900px) {
+        display: none;
+    }
 
     @media screen and (max-width: 850px) {
         display: none;
