--- a/scss/pages/program-overview/_footer.scss
+++ b/scss/pages/program-overview/_footer.scss
@@ -42,6 +42,10 @@ footer {
                     padding: 20px 20px;
                     font-size: 20px;
 
+                    b {
+                        font-size: 25px;
+                    }
+
 
                 }
             }
