--- a/scss/pages/home/_home.scss
+++ b/scss/pages/home/_home.scss
@@ -20,10 +20,9 @@
         bottom: 16%;
         transition: all 0.2s ease-in-out;
         font-size: 25px;
-        background: url('../../../dist/assets/img/homeBtnBG.jpeg') center/cover no-repeat;
+        background: url('../img/homeBtnBG.jpeg') center/cover no-repeat;
 
         &:hover {
-
             transform: scale(1.04);
         }
 
@@ -71,6 +70,16 @@
 
     }
 
+
+
+}
+
+.home-img-0 {
+    display: block;
+
+    @media screen and (max-width: 850px) {
+        display: none;
+    }
 
 
 }
