--- a/scss/pages/program-overview/_program-overview.scss
+++ b/scss/pages/program-overview/_program-overview.scss
@@ -16,12 +16,25 @@ main {
 .p2-cover {
     position: absolute;
     width: 100%;
-    height: 20vh;
-    bottom: 0;
-    border-bottom: solid 7px $yellow;
+    height: 100vh;
+
+
     @include flex-center();
     flex-direction: column;
     justify-content: flex-end;
+
+    .yellow-line {
+        width: 100%;
+        height: 7px;
+        background: $yellow;
+        padding: 0;
+
+        @media screen and (max-width: 450px) {
+            max-width: none;
+            padding: 0;
+        }
+
+    }
 
     div {
         padding: 20px 50px;
@@ -140,8 +153,13 @@ section {
     padding: 20px 20px;
 
     @media screen and (max-width: 568px) {
-        padding-bottom: 0px;
+        // padding-bottom: 0px;
     }
+
+}
+
+.owner-section {
+    margin-bottom: 0;
 
 }
 
@@ -149,6 +167,8 @@ section {
     padding: 0px 20px;
     margin-bottom: 20px;
 }
+
+
 
 .two-side {
     width: 100%;
@@ -207,6 +227,7 @@ section {
     @include flex-center();
     flex-direction: column;
     width: 100%;
+
 
     span {
         max-width: 1400px;
