--- a/scss/pages/program-overview/_program-overview.scss
+++ b/scss/pages/program-overview/_program-overview.scss
@@ -153,7 +153,7 @@ section {
     padding: 20px 20px;
 
     @media screen and (max-width: 568px) {
-        // padding-bottom: 0px;
+        padding-bottom: 0px;
     }
 
 }
