--- a/scss/pages/program-overview/_program-overview.scss
+++ b/scss/pages/program-overview/_program-overview.scss
@@ -254,6 +254,14 @@ section {
             margin-left: 0;
         }
     }
+
+    .ul-modified-es {
+        margin-left: -27px;
+
+        @media screen and (max-width: 750px) {
+            margin-left: 0;
+        }
+    }
 }
 
 .--smaller {
